# Civil_Engineering_Tools

./: .gitignore  README.md  Your project structure for Civil.docx  hello.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: math.ipynb
notebooks/: Matplotlib Extras.ipynb  hello.ipynb
notebooks/Calculating trib regions/: Calculating voronoi trib regions.ipynb  Floor_Plan.3dm  Floor_Plan.3dm.rhl  Floor_Plan.3dmbak  Trib Areas - General Geometry.ipynb  columns.wkt  columns.wkt.txt  floor_data.json  load_heavy.wkt.txt  load_light.wkt.txt  occupancy_loading.json  slab_edge.wkt.txt  slab_openings.wkt.txt  slab_outline.wkt  test_01.ipynb  test_02.ipynb  test_03.ipynb  test_04.ipynb  test_05.ipynb  test_06_final.ipynb  walls.wkt.txt  wkt.gh  wkt_r00.gh  wkt_r01.gh
notebooks/column_buckling_check/: Alternative moment of inertia.ipynb  Alternative moment of inertia_final.ipynb
notebooks/column_cm/: calculate_Cm.ipynb  column_design_forces.csv
notebooks/column_pandas/: column_design_small.xlsx  ppp.ipynb  ppp_r00.ipynb
notebooks/handcalcs/: Getting started with forallpeople.ipynb  Getting started with handcalcs.ipynb  test.ipynb
notebooks/modeling_from_revit/: 241213_columns_to_etabs.ipynb  241213_columns_to_etabs_tests.ipynb  241230_check_between_etabs_revit.ipynb  250225_columns_to_etabs.ipynb  250308_etabs_warning.ipynb  250309_etabs_earth_pressure.ipynb  250317_sap2000.ipynb  250413_etabs_warning.ipynb  CSi_PythonNET_Example.py  Enumerations.ipynb  Python.Net.ipynb  gh_code_lib.ipynb  jupyter_training.ipynb  log.txt  sample_warning.txt
notebooks/modeling_from_revit/test_data/: analytical_levels.json  area_load_data.json  beam_cross_section_data.json  beam_data.json  column_cross_section_data.json  column_data.json  cross_section_data.json  floor_cross_section_data.json  floor_data.json  floor_sections.json  line_load_data.json  mapped_levels.json  material_data.json  wall_cross_section_data.json  wall_data.json  wall_sections.json
notebooks/pandas/: 01_critical_skills.ipynb  02_fix_problem_when_import.ipynb  03_prepaire_the_data.ipynb  04_analyze_data.ipynb  05_tests.ipynb  fires_case_study.ipynb
src/ceng/: __init__.py  ceng.py  excel_engine.py
src/mat_ceng/: __init__.py  column.py  column_area.py  csi.py  mat_ceng.py
streamlit_app/ceng_app/: Ceng.py  test.py
streamlit_app/ceng_app/pages/: 01_Aci_Crack_Width_Bending.py  01_Column_Trib_Forces.py  01_RC_Column_delta_ns.py  03_RC_Column_delta_ns.py
streamlit_app/sample_app/: app.py  sample_app_module.py
streamlit_app/sample_app2/: app.py
tests/: test_ceng.py  test_mat_ceng.py  test_mat_ceng_column.py
tests/mat_ceng/: test_core.py
(+4 files in other folders)
