
[project]
name = "mat_ceng"
version = "0.0.15"
description = "Package For Some Civil Engineering Tools."
authors = [{name = "Mohamad Ali", email = "mohamadalitellawi@gmail.com"}]
requires-python = ">=3.13"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["library", "civil", "structural", "python"]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "numpy",
    "pandas",
    "xlwings",
    "streamlit",
    "shapely",
    "plotly",
    "more_itertools",
    "pythonnet",
    "matplotlib",
    "openpyxl",
    "seaborn>=0.13.2",
    "geopandas>=1.1.0",
    "sympy>=1.14.0",
    "scipy>=1.16.0",
    "numdifftools>=0.9.41",
    "vpython>=7.6.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Home = "https://github.com/mohamadalitellawi/Civil_Engineering_Tools/"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pytest",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.0",
]
