[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mat_ceng"
keywords = ["library", "civil", "structural", "python"]
authors = [{name = "Mohamad Ali", email = "mohamadalitellawi@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "pandas",
    "xlwings",
    "streamlit",
    "plotly",
    "more_itertools",
    "pythonnet",
    "matplotlib",
    "openpyxl",
]

[project.urls]
Home = "https://github.com/mohamadalitellawi/Civil_Engineering_Tools/"
